--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.6.2)
 project(raspberry_controls)
 
 set(CMAKE_CXX_STANDARD 11)
 
 add_library(raspberry_controls
-        include/Gpio.h src/Gpio.cpp
-        include/Led.h src/Led.cpp
+        include/gpio.h src/gpio.cpp
+        include/led.h src/led.cpp
         include/motor.h src/motor.cpp
         )
 
